<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    >


    <!-- toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintBottom_toTopOf="@+id/edit_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <!-- customized left butotn -->
            <TextView
                android:id="@+id/edit_tb_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/edit_tb_left"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp" />

            <!-- customized title -->
            <TextView
                android:id="@+id/edit_tb_middle"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/edit_tb_center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />


            <!-- customized right button -->
            <TextView
                android:id="@+id/edit_tb_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/edit_tb_right"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <TableLayout
        android:id="@+id/edit_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_toolbar"
        tools:context=".EditorActivity">

        <!-- 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_event_title"
                android:layout_width="178dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Title"
                android:padding="10dp"
                android:textSize="18sp" />

        </TableRow>


        <!-- 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- google place autocomplete -->
            <fragment
                android:id="@+id/edit_event_location"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Find a Location"
                android:padding="10dp"
                android:textSize="18sp"
                />

        </TableRow>

        <!-- space -->
        <View
            android:layout_height="20dip"
            android:background="#FFF" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
z

            <TextView
                android:id="@+id/time"
                android:padding="10dp"
                android:text="Time"
                android:textSize="18sp"
                android:layout_column="0"
                />


            <Button
                android:id="@+id/edit_event_time"
                android:text="00:00"
                android:textColor="#612B1D1D"
                android:textSize="18sp"
                android:layout_column="1"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date"
                android:padding="10dp"
                android:text="Date"
                android:textSize="18sp"
                android:layout_column="0"
                />

            <Button
                android:id="@+id/edit_event_date"
                android:text="dd/MM/yy"
                android:textColor="#612B1D1D"
                android:textSize="18sp"
                android:layout_column="1"
                />
        </TableRow>

        <!-- space -->
        <View
            android:layout_height="20dip"
            android:background="#FFF" />

        <!-- 3 alert -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Alert"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_column="0"
                />

            <Button
                android:id="@+id/edit_event_alert"
                android:hint="None"
                android:textSize="18sp"
                android:layout_column="1"
                />


        </TableRow>


        <!-- space -->
        <View
            android:layout_height="20dip"
            android:background="#FFF" />


        <!-- url -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_event_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="URL"
                android:padding="10dp"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_event_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Notes"
                android:padding="10dp"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Calendar_event"
                android:gravity="clip_horizontal"
                android:text="Add Event to Calendar"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_weight="1"
                />


        </TableRow>



    </TableLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
