<resources>
    <string name="app_name">Reminder</string>
    <string name="init_welcome">Welcome Reminder</string>
    <string name="init_btn_content">Welcome</string>
    <string name="init_authors">Supriya Kamble(u6734521),\nLimin Deng(u6849956),
        \nYun Guan(u3425167),  \nRan Zhang(u6760490),\n presents @2019</string>
    <string name="main_item_2">Calendar</string>
    <string name="main_item_3">Location</string>
    <string name="main_item_1">ToDoList</string>
    <string name="map_tb_title">Location</string>
    <string name="note_add">Add</string>
    <string name="edit_tb_center">New Event</string>
    <string name="edit_tb_left">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_tb_right">Save</string>
    <string name="show_incompleted">Show incompleted</string>
    <string name="show_completed">Show completed</string>
    <string name="delete_all">Delete all</string>
    <string name="populate_data">Populate Data</string>

</resources>
