<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >


    <TextView
        android:id="@+id/event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="10dp"
        android:text="Study cursors"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:padding="10dp"
        android:text="Study cursors"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textAlignment="center"
        />


    <TextView
        android:id="@+id/event_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:padding="10dp"
        android:text="Study cursors"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textAlignment="center"
        />



</LinearLayout>