<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_show_all"
        android:icon="@android:drawable/ic_input_add"
        android:title="Show all">
    </item>


    <item
        android:id="@+id/main_show_incompleted"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/show_incompleted">
    </item>

    <item
        android:id="@+id/main_show_completed"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/show_completed">
    </item>

    <item
        android:id="@+id/main_delete_all"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/delete_all">
    </item>

    <!-- for demonstration -->
    <item
        android:id="@+id/main_popluate"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/populate_data">
    </item>


</menu>