...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_search"
        tools:ignore="MissingConstraints" />

    <!-- swip list view -->
    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/main_swipe_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/main_nav_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_search" />
...
